@@ -1,5 +1,11 @@
 2023-06-05 Albert Chu <chu11@llnl.gov>
 
+	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
+	(_get_sensor_units): Handle special case when sensor has units
+	"RPM" and the units rate is "per minute".
+
+2023-06-05 Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/spec: Update enterprise numbers scripts
 
 	* libfreeipmi/spec: Update enterprise numbers.  Hand remove few
